Cambios que agregamos en el sitio web

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        Keper es el mejor programador del mundo.
-    
+        El asombroso KeperXiang es el mejor programador del mundo.
     </p>
 </body>
 </html>
